exports[`index exe should accept async/await 1`] = `
"

    Starting with limit=1, interval=1000, errorOut=true
    Doing thing 1. fakecmd with limit=1, interval=1000, errorOut=true done.

. Fault while executing \"MOCK_ERROR_OUT=1 MOCK_LIMIT=1 node #{SCROLEX_ROOT}/src/fakecmd.js\". Exit code: 1"
`;

exports[`index exe should accept async/await 2`] = `
"Starting with limit=2, interval=1000, errorOut=false
Doing thing 1
Doing thing 2. fakecmd with limit=2, interval=1000, errorOut=false done."
`;

exports[`index exe should accept async/await 3`] = `
"Starting with limit=2, interval=1000, errorOut=false
Doing thing 1
Doing thing 2. fakecmd with limit=2, interval=1000, errorOut=false done."
`;

exports[`index exe should accept async/await 4`] = `
"Starting with limit=2, interval=1000, errorOut=false
Doing thing 1
Doing thing 2. fakecmd with limit=2, interval=1000, errorOut=false done."
`;

exports[`index exe should accept async/await and catch an error 1`] = `
[Error: 

    Starting with limit=1, interval=1000, errorOut=true
    Doing thing 1. fakecmd with limit=1, interval=1000, errorOut=true done.

. Fault while executing "MOCK_ERROR_OUT=1 MOCK_LIMIT=1 node #{SCROLEX_ROOT}/src/fakecmd.js". Exit code: 1]
`;
